fix logo, selects, zoom while focusing input on mobile

--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -4,6 +4,7 @@
   @include default-flex($align: center);
 
   text-decoration: none;
+  width: 64px;
   height: 64px;
 
   & img {
