--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -20,6 +20,7 @@
     width: 100%;
     text-align: left;
     padding: 9px 12px 8px;
+    color: $primaryAccent;
 
     transition: border-color $transitionDuration;
 
